tests/errors/macro/macro_unclosed_string/in_define.c
#define A "qw	// newline в константе

int main()
{
	printf(A");
	return 0;
}